--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,9 @@ on:
     branches: [ master ]
 
 jobs:
-  build-deploy:
+  
+
+  build:
 
     runs-on: ubuntu-latest
 
@@ -18,10 +20,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install and Build
+      - name: Build
         run: |
           npm ci
           npm run build
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.7
