--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Deploy
 
 on:
   push:
@@ -10,28 +10,18 @@ on:
     branches: [ master ]
 
 jobs:
-  
-
-  build:
-
+  build-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Check out Git repository
         uses: actions/checkout@v2
 
       - name: Build
         run: |
           npm ci
           npm run build
-
-  deploy:
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.7
