fix(ci): ignore gh-pages branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches-ignore:
       - master
+      - gh-pages
   pull_request:
     branches-ignore:
       - master
+      - gh-pages
 
 jobs:
   lint:
