fix(ci): lint step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
       - run: npm ci
-      - uses: wearerequired/lint-action@v1
-        with:
-          eslint: true
-          prettier: true
+      - run: npm run lint
   build:
     needs: lint
     runs-on: ubuntu-latest
